syntax = "proto3";
import "google/protobuf/empty.proto";

package ca.myasir.auroraweatherservice.proto;

option java_multiple_files = true;
option java_package = "ca.myasir.auroraweatherservice.lib";
option java_outer_classname = "AuroraWeatherServiceProto";

service AuroraWeatherService {
  rpc GetWeatherData (GetWeatherDataRequest) returns (GetWeatherDataResponse) {}

  rpc GetLocations (GetLocationsRequest) returns (GetLocationsResponse) {}

  rpc GetLocationCoordinates (GetLocationCoordinatesRequest) returns (GetLocationCoordinatesResponse) {}

  rpc GetWeatherProviders (google.protobuf.Empty) returns (GetWeatherProvidersResponse) {}
}

message GetLocationsRequest {
  string searchText = 1;
}

message GetLocationsResponse {
  repeated LocationResult results = 1;
}

message GetLocationCoordinatesRequest {
  string placeId = 1;
}

message GetLocationCoordinatesResponse {
  Coordinates coordinates = 1;
}

message LocationResult {
  string placeId = 1;
  string locationName = 2;
}

message Coordinates {
  double longitude = 1;
  double latitude = 2;
}

message GetWeatherDataRequest {
  double longitude = 1;
  double latitude = 2;
  WeatherProvider provider = 3;
}

message GetWeatherDataResponse {
  repeated WeatherData forecast = 1;
}

message GetWeatherProvidersResponse {
  repeated string providers = 1;
}

/**
A struct representing the weather data for a given day
 */
message WeatherData {
  string date = 1;
  double temp = 2;
  double minTemp = 3;
  double maxTemp = 4;
  double windSpeed = 5;
  double windDirectionDegree = 6;
  double humidity = 7;
  double dewpoint = 8;
  double uv = 9;
  double visibility = 10;
  string weatherIconUrl = 11;
}

/**
Enum to represent the different weather providers. This enum values will be returned to the frontend as a list
of available providers. DO NOT add another provider until you have confirmed the backend integration with the provider
works as intended.
 */
enum WeatherProvider {
  NONE = 0;
  WEATHER_API = 1;
  X_WEATHER_API = 2;
}


